# roms_analysis_demo

./: .gitignore  README.md
lib/sb_basin/: pyproject.toml
lib/sb_basin/src/sb_basin/: __init__.py
lib/srridge/: README.md  pyproject.toml
lib/srridge/src/srridge/: __init__.py  open_dataset.py
project_code/: .env  pyproject.toml
project_code/xroms_basics/: 1.opening_a_dataset.ipynb  2.parallel_computation_with_dask.ipynb  opening_a_dataset.ipynb
