[project]
name = "sb-basin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jamie", email = "hilditch@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "xarray>=2025.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
