[project]
name = "srridge"
version = "0.1.0"
description = "Functions for loading Santa Rosa Ridge model output"
readme = "README.md"
authors = [
    { name = "Jamie", email = "hilditch@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
    "xarray>=2025.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
